Bug 942600 - [Australis] Bookmarks toolbar items can get suddenly overflowed when dragging items into it. r=mak.
UltraBlame original commit: 7a80f82f5ce59830809bc9a26a223a97442bcd57

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1814,6 +1814,19 @@ display
 none
 ;
 }
+#
+PlacesToolbarDropIndicatorHolder
+{
+position
+:
+absolute
+;
+top
+:
+25
+%
+;
+}
 toolbarpaletteitem
 >
 #
